🔙 | Rollback Changes - Font-size was fix with correct font-family, but uncompability with new changes making it too large

--- a/styles/scss/_typography.scss
+++ b/styles/scss/_typography.scss
@@ -5,7 +5,7 @@ section.results{
     @include font-styles(.95rem, 700, $pale-blue, 0.6);
 
     @include respond-to(large){
-      font-size: 1.25rem;
+      font-size: 1.1rem;
     }
   
   }
@@ -20,6 +20,10 @@ div.analysis{
   p:first-child{
     @include font-styles(2.125rem, 600, $white, 1);
     @extend %text-center;
+
+    @include respond-to(large){
+      font-size: 1.8rem;
+    }
   }
 
   p:last-child{
@@ -28,7 +32,7 @@ div.analysis{
     letter-spacing: 0.54px;
 
     @include respond-to(large){
-      font-size: 1.15rem;
+      font-size: 0.97rem;
       opacity: 0.55;
     }
   }
@@ -40,7 +44,8 @@ section.summary{
     text-align: left;
 
     @include respond-to(large){
-      font-size: 1.25rem;
+      font-size: 1.15rem;
+      margin-top: 40px;
     }
   }  
 }
