--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,7 @@ section.results > p {
 }
 @media only screen and (min-width: 768px) {
   section.results > p {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 }
 
@@ -65,6 +65,11 @@ div.analysis p:first-child {
   color: hsl(0, 0%, 100%);
   opacity: 1;
 }
+@media only screen and (min-width: 768px) {
+  div.analysis p:first-child {
+    font-size: 1.8rem;
+  }
+}
 div.analysis p:last-child {
   font-size: 1rem;
   font-weight: 400;
@@ -74,7 +79,7 @@ div.analysis p:last-child {
 }
 @media only screen and (min-width: 768px) {
   div.analysis p:last-child {
-    font-size: 1.15rem;
+    font-size: 0.97rem;
     opacity: 0.55;
   }
 }
@@ -88,7 +93,8 @@ section.summary p:first-child {
 }
 @media only screen and (min-width: 768px) {
   section.summary p:first-child {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
+    margin-top: 40px;
   }
 }
 
@@ -185,7 +191,6 @@ section.results {
     max-width: 364px;
     height: 515px;
     border-radius: 35px;
-    padding-top: 0;
   }
 }
 section.results div.circle {
@@ -200,8 +205,8 @@ section.results div.circle {
 }
 @media only screen and (min-width: 768px) {
   section.results div.circle {
-    scale: 1.25;
-    margin: 20px 0 15px;
+    scale: 1.1;
+    margin: 5px 0 0;
   }
 }
 section.results div.analysis {
